[gd_scene load_steps=4 format=3 uid="uid://ditoou4g7rmlj"]

[ext_resource type="Script" path="res://Scene/main.gd" id="1_b5pmf"]
[ext_resource type="PackedScene" uid="uid://cril5vmewcbqo" path="res://Scene/bitmaptest.tscn" id="1_enh40"]
[ext_resource type="PackedScene" uid="uid://clcn4ycjgav8r" path="res://Scene/worm.tscn" id="3_u87op"]

[node name="Main" type="Node2D"]
script = ExtResource("1_b5pmf")

[node name="TerrainTest" parent="." instance=ExtResource("1_enh40")]

[node name="Worm" parent="." instance=ExtResource("3_u87op")]
position = Vector2(654, 396)

[node name="Control" type="Container" parent="."]
offset_right = 132.0
offset_bottom = 31.0
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
toggle_mode = true
text = "ACTICE BUTTON"
metadata/_edit_use_anchors_ = true

[node name="BazookaButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
keep_pressed_outside = true
text = "Bazooka
"

[node name="GranadeButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
keep_pressed_outside = true
text = "Granade"

[node name="SniperButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Sniper"

[node name="Projectiles" type="Node2D" parent="."]

[connection signal="weapon_shot" from="Worm" to="." method="_on_worm_weapon_shot"]
[connection signal="toggled" from="Control/HBoxContainer/Button" to="Worm" method="_on_button_toggled"]
[connection signal="pressed" from="Control/HBoxContainer/BazookaButton" to="." method="_on_bazooka_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/GranadeButton" to="." method="_on_granade_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/SniperButton" to="." method="_on_sniper_button_pressed"]
